// ButtonType.h
#pragma once
enum class ButtonType {
    PHYSICAL,
    ROTARY,
};