// KillRotationFunctionality.h
#pragma once
#include "KillSwitchButtonFunctionality.h"

class KillRotationFunctionality : public KillSwitchButtonFunctionality {
public:
    void execute() override {
        // Implement rotation kill
    }
};