

// KillTranslationFunctionality.h
#pragma once
#include "KillSwitchButtonFunctionality.h"

class KillTranslationFunctionality : public KillSwitchButtonFunctionality {
public:
    void execute() override {
        // Implement translation kill
    }
};