// CommandType.h
#pragma once
enum class CommandType {
    SM_MENU = 0,  // Key "Menu"
    SM_FIT = 1,   // Key "Fit"
    SM_T = 2,     // Key "Top"
    SM_R = 4,     // Key "Right"
    SM_F = 5,     // Key "Front"
    SM_RCW = 8,   // Key "Roll 90°CW"
    SM_1 = 12,    // Key "1"
    SM_2 = 13,    // Key "2"
    SM_3 = 14,    // Key "3"
    SM_4 = 15,    // Key "4"
    SM_ESC = 22,  // Key "ESC"
    SM_ALT = 23,  // Key "ALT"
    SM_SHFT = 24, // Key "SHIFT"
    SM_CTRL = 25, // Key "CTRL"
    SM_ROT = 26   // Key "Rotate"
};
