@startuml gpt_button

abstract class Button {
    - config: ButtonConfig
    - defaultConfig: ButtonConfig
    - functionality: IButtonFunctionality
    + press(): void
    + release(): void
    + setFunctionality(func: IButtonFunctionality): void
    + getFunctionality(): IButtonFunctionality
    + setConfig(cfg: ButtonConfig): void
    + getConfig(): ButtonConfig
    + getDefaultConfig(): ButtonConfig
}

class PhysicalButton {
    - pinNumber: int
    - lastState: bool
    + press(): void
    + release(): void
    + setConfig(cfg: PhysicalButtonConfig): void
    + getConfig(): PhysicalButtonConfig
    + readStatus(): bool
}

class SimulatedButton {
    + press(): void
    + release(): void
    + setConfig(cfg: SimulatedButtonConfig): void
    + getConfig(): SimulatedButtonConfig
}

Button <|-- PhysicalButton
Button <|-- SimulatedButton

class ButtonConfig {
    + id: int
    + label: string
    + isEnabled: bool
    + setId(id: int): void
    + getId(): int
    + setLabel(label: string): void
    + getLabel(): string
    + setEnabled(enabled: bool): void
    + isEnabled(): bool
}

class PhysicalButtonConfig {
    + pinNumber: int
    + debounceTime: int
    + setPinNumber(pin: int): void
    + getPinNumber(): int
    + setDebounceTime(ms: int): void
    + getDebounceTime(): int
}
class SimulatedButtonConfig {
    + simulationKey: string
    + setSimulationKey(key: string): void
    + getSimulationKey(): string
}

ButtonConfig <|-- PhysicalButtonConfig
ButtonConfig <|-- SimulatedButtonConfig

class DefaultButtonConfig <<Singleton>> {
    - static instance: DefaultButtonConfig
    + getInstance(): DefaultButtonConfig
    + getDefaultConfig(type: ButtonType): ButtonConfig
}

interface IButtonFunctionality {
    + execute(): void
}

class CommandButtonFunctionality {
    - command: CommandType
    + CommandButtonFunctionality(cmd: CommandType)
    + execute(): void
    + getCommand(): CommandType
    + setCommand(cmd: CommandType): void
}

abstract class KillSwitchButtonFunctionality {
    + execute(): void
}

class KillTranslationFunctionality {
    + execute(): void
}
class KillRotationFunctionality {
    + execute(): void
}

IButtonFunctionality <|.. CommandButtonFunctionality
IButtonFunctionality <|.. KillSwitchButtonFunctionality
KillSwitchButtonFunctionality <|-- KillTranslationFunctionality
KillSwitchButtonFunctionality <|-- KillRotationFunctionality

enum CommandType {
    SM_MENU = 0,  // Key "Menu"
    SM_FIT = 1,   // Key "Fit"
    SM_T = 2,     // Key "Top"
    SM_R = 4,     // Key "Right"
    SM_F = 5,     // Key "Front"
    SM_RCW = 8,   // Key "Roll 90°CW"
    SM_1 = 12,    // Key "1"
    SM_2 = 13,    // Key "2"
    SM_3 = 14,    // Key "3"
    SM_4 = 15,    // Key "4"
    SM_ESC = 22,  // Key "ESC"
    SM_ALT = 23,  // Key "ALT"
    SM_SHFT = 24, // Key "SHIFT"
    SM_CTRL = 25, // Key "CTRL"
    SM_ROT = 26   // Key "Rotate"
}

class ButtonFactory {
    + createButton(type: ButtonType, config: ButtonConfig): Button
}

enum ButtonType {
    PHYSICAL
    SIMULATED
}

class EEPROMStore {}
Button o-- ButtonConfig : uses
Button o-- IButtonFunctionality : has
ButtonConfig ..> DefaultButtonConfig : gets default config
ButtonFactory ..> Button : creates
ButtonConfig ..> EEPROMStore : loads config

@enduml